Squash intelliJ-marked problems in constant files